# sumo-rs

./: CLAUDE.md  Cargo.toml  README.md
suit-codec/: Cargo.toml
suit-codec/src/: decode.rs  encode.rs  envelope.rs  labels.rs  lib.rs  manifest.rs  text.rs
suit-crypto/: Cargo.toml
suit-crypto/src/: cose_key.rs  ecdh_es.rs  lib.rs  rustcrypto.rs  streaming.rs
suit-offboard/: Cargo.toml
suit-offboard/src/: campaign_builder.rs  cose_key.rs  encryptor.rs  error.rs  image_builder.rs  keygen.rs  lib.rs
suit-onboard/: Cargo.toml
suit-onboard/src/: decompressor.rs  decryptor.rs  device_id.rs  lib.rs  manifest.rs  orchestrator.rs  policy.rs  validator.rs
sumo-codec/: Cargo.toml
sumo-codec/src/: commands.rs  component.rs  decode.rs  encode.rs  error.rs  labels.rs  parameters.rs  types.rs
sumo-crypto/: Cargo.toml
sumo-crypto/src/: ecdh_es.rs  error.rs  rustcrypto.rs  traits.rs
sumo-offboard/: Cargo.toml
sumo-offboard/src/: campaign_builder.rs  cose_key.rs  encryptor.rs  error.rs  image_builder.rs  keygen.rs  recipient.rs
sumo-offboard/tests/: e2e.rs
sumo-onboard/: Cargo.toml
sumo-onboard/src/: decompressor.rs  decryptor.rs  device_id.rs  error.rs  lib.rs  linux_platform.rs  manifest.rs  orchestrator.rs  platform.rs  policy.rs  validator.rs
sumo-processor/: Cargo.toml
sumo-processor/src/: lib.rs  processor.rs
sumo-tools/: Cargo.toml  README.md
sumo-tools/src/: main.rs
