[package]
name = "sumo-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Crypto traits and RustCrypto backend for SUIT (no_std)"

[dependencies]
sumo-codec = { path = "../sumo-codec" }
coset = { version = "0.3", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdh", "ecdsa", "arithmetic"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
aes-kw = { version = "0.2", default-features = false }
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
ciborium = { version = "0.2", default-features = false }
aes = "0.8"
ctr = "0.9"
ghash = "0.5"
getrandom = "0.2"

[dev-dependencies]
hex = "0.4"

[features]
default = []
